--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -850,11 +850,6 @@ a {
 }
 
 .footer-section .footer-list .icon-list-box1 li {
-  padding-left: 34px;
-  margin-bottom: 14px;
-}
-
-.footer-section .footer-list .icon-list-box1 li {
   padding-left: 6px;
   margin-bottom: 14px;
 }
